@@ -1,3 +1,9 @@
+2007-02-24  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimp-transform-region.c (gimp_transform_region): moved
+	linear and cubic code to their own functions and let them iterate
+	over tiles instead of rows in the destination buffer.
+
 2007-02-26  Sven Neumann  <sven@gimp.org>
 
 	* authors.xml: restored alphabetical order.
